# subtype

./: Cargo.toml  DEV.md  Justfile  LICENSE  README.md  clippy.toml  lefthook.yml
src/: checkers.rs  conjurers.rs  constraints.rs  containers.rs  errors.rs  expressions.rs  functions.rs  helpers.rs  lib.rs  macros.rs  macros_experimental.rs  macros_specific.rs  macros_traits.rs  newtype_path_buf.rs  newtype_primitive_number.rs  newtype_static_str.rs  newtype_string.rs  newtype_u32.rs  newtype_u64.rs  subtype.rs  tests.rs  traits.rs  transformers.rs  validation_error.rs  with_derive_neg.rs
src/checkers/: all.rs  contains.rs  empty.rs  equal.rs  even.rs  field_equal.rs  max.rs  max_len.rs  min.rs  not.rs  or.rs  pass.rs  starts_with.rs  zero.rs
src/conjurers/: exclusive.rs  i32.rs  inclusive.rs  now.rs  space.rs  u32.rs  u64.rs
src/constraints/: all.rs  empty.rs  eq.rs  equal.rs  even.rs  min.rs  non_empty.rs  non_zero.rs  not.rs  or.rs  pass.rs  starts_with.rs
src/containers/: exclusive.rs  inclusive.rs  u32.rs
src/errors/: error_2.rs  incorrect_value_error.rs  invalid_value_error.rs  validation_error.rs
src/functions/: get_result.rs
src/traits/: adjust.rs  check.rs  conjure.rs  even.rs  get_ref.rs  is_empty.rs  len.rs  mutate.rs  show.rs  transform.rs  trim.rs  try_transform.rs  validate.rs  value.rs
src/transformers/: trim.rs
tasks/: Cargo.toml
tasks/src/: main.rs
tests/: asset_id.rs  macro_name_scope.rs  newtype_macro.rs  prae.rs  tasks.rs  test_email.rs  test_generic.rs  test_username.rs  test_username_implicit.rs  username_explicit.rs  username_from_transformer_checker.rs  username_impl_all.rs  username_impl_constructor_setter.rs  username_multiple_checkers.rs  username_newtype.rs  username_newtype_with_validation.rs  username_newtype_with_validation_regular_inner.rs
