[package]
name = "subtype"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = ""
homepage = "https://github.com/DenisGorbachev/subtype"
repository = "https://github.com/DenisGorbachev/subtype"
readme = "README.md"
keywords = ["newtype", "validation"]
categories = ["rust-patterns"]

[dependencies]
derive_more = { version = "1.0.0", features = ["error"] }
num-traits = { version = "0.2.0", optional = true }
serde = { version = "1.0.0", optional = true, features = ["derive"] }
pretty-type-name = "1.0.1"
time = { version = "0.3.36", optional = true }

[dev-dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
assert_matches = { version = "1.5.0" }
prae = "0.8.4"
